--- a/public/index.html
+++ b/public/index.html
@@ -7,11 +7,11 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="keywords"
-      content="Ansh Phirani, ansh, phirani, web developer portfolio, ansh web developer, ansh developer, mern stack, ansh phirani portfolio, vscode-portfolio"
+      content=""
     />
     <meta
       name="description"
-      content="Personal portfolio of Ansh Phirani, a full stack web developer."
+      content="Personal portfolio of Virendra Soni, a full stack web developer."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/vscode-icon.ico" />
     <!--
@@ -28,7 +28,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Ansh Phirani portfolio</title>
+    <title>Virendra Soni portfolio</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
